@@ -1,5 +1,8 @@
 2009-11-14  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/generic/toom52_mul.c: Toggle the right flag bit in an
+	HAVE_NATIVE_mpn_add_n_sub_n arm.
+
 	* tests/mpz/t-remove.c: New file.
 
 	* mpn/generic/remove.c: Major overhaul.  Add parameter 'cap'.
